# proton-mail-mcp

./: .env.example  .gitignore  README.md  TODO.md  mcp.notes.md  pyproject.toml  tox.ini
.claude/: CLAUDE.md  summary.CLAUDE.md
src/proton_mail_mcp/: __main__.py  cli.py  server.py
src/proton_mail_mcp/commands/: serve.py
src/proton_mail_mcp/tools/: check_connection.py  list_emails.py  ping.py
src/proton_mail_mcp/utils/: config.py  email_parser.py  imap.py
tests/: test_check_connection.py  test_email_parser.py  test_ping.py
