[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proton-mail-mcp"
version = "0.1.0"
description = "MCP server for Proton Mail via Proton Bridge"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "click",
    "python-dotenv",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "tox",
    "tox-uv",
]

[project.scripts]
proton_mail_mcp = "proton_mail_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/proton_mail_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
